--- a/lab-1/ll-1-case-study.Rmd
+++ b/lab-1/ll-1-case-study.Rmd
@@ -27,7 +27,7 @@ learning methods and techniques can be applied to address a research
 question of interest, create useful data products, and conduct
 reproducible research. Each case study is structured around a basic
 analytics workflow modeled after the Data-Intensive Research Workflow
-from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
+from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
 
 ![](https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png){alt=""
 width="80%"}
@@ -194,8 +194,6 @@ cleaning tasks. Use the code chunk below to load these two packages:
 
 ```{r load-tidymodels}
 
-library(tidymodels)
-library(janitor)
 
 ```
 
@@ -297,7 +295,7 @@ using the `glimpse()` function). Do this in the code chunk below! Note
 its dimensions --- especially how many rows it has!
 
 ```{r}
-glimpse(students)
+
 ```
 
 Write down a few observations after inspecting the data:
@@ -354,7 +352,7 @@ In the chunk below, use the `view()` function to manually check and see
 if our new variable has indeed been added to our data frame.
 
 ```{r, eval=FALSE}
-view(students)
+
 ```
 
 ## 3. EXPLORE
@@ -431,7 +429,7 @@ variable.
 
 ```{r}
 students <- students %>% 
-    mutate(imd_band = factor(imd_band, levels = c("0-10%",
+    mutate(___ = factor(___, levels = c("0-10%",
                                                   "10-20%",
                                                   "20-30%",
                                                   "30-40%",
@@ -441,7 +439,7 @@ students <- students %>%
                                                   "70-80%",
                                                   "80-90%",
                                                   "90-100%"))) %>% # this creates a factor with ordered levels
-    mutate(imd_band = as.integer(imd_band)) # this changes the levels into integers based on the order of the factor levels
+    mutate(___ = as.integer(___)) # this changes the levels into integers based on the order of the factor levels
 
 students
 ```
@@ -552,9 +550,7 @@ steps) to check that this data set indeed has 80% of the number of
 observations as in the larger data. Do that in the chunk below:
 
 ```{r}
-data_train
 
-data_test
 ```
 
 ### Step 2: Create a "Recipe"
@@ -697,7 +693,7 @@ Importantly, here, we can look at the model. Type `fitted_model` in a
 code chunk to take a look.
 
 ```{r}
-fitted_model
+
 ```
 
 Note that while we don't typically interpret the coefficients for a
@@ -861,10 +857,8 @@ that can be taken to act upon your findings.
 For now, we will wrap up this case study by converting our work into a
 webpage that can be used to communicate your learning and demonstrate
 some of your new R skills. To do so, you will need to "knit" your
-document by clicking the
-![](img/Screenshot%202023-06-28%20at%204.14.22%20PM.png){width="10%"}
-button in the menu bar at the the top of this file. This will do two
-things; it will:
+document by clicking the button in the menu bar at the the top of this
+file. This will do two things; it will:
 
 1.  check through all your code for any errors; and,
 
