--- a/introductory-presentation.rmd
+++ b/introductory-presentation.rmd
@@ -68,6 +68,18 @@ class: clear, inverse, center, middle
 # Front Matter
 ---
 
+## Joshua (Josh) Rosenberg  
+Associate Professor of STEM Education at the University of Tennessee, Knoxville
+
+```{r, echo = FALSE, out.width="20%", fig.align='center'}
+knitr::include_graphics("img/jr-fam.jpeg")
+```
+
+- https://datascienceineducation.com/
+- [Project CREDIBLE](https://cehhs.utk.edu/2023/05/12/data-in-biology-teaching-environments/)
+- *And*: methodological privacy, computational grounded theory, CS education, data science education
+---
+
 # Goals for this module
 
 ### Over-arching goal:
@@ -326,4 +338,6 @@ I hope to see you in the ML topic area learning labs!
 *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu)
 *Dr. Peng  Xu* (hepeng1@msu.edu)
 
-[Slides](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+[These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+
+[General troubleshooting tips for R and RStudio](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
